fix z-index question

--- a/src/routes/NewJR/newJR.scss
+++ b/src/routes/NewJR/newJR.scss
@@ -3,7 +3,8 @@
 .root {
   width: 360px;
   overflow: hidden;
-  position: relative;
+  position: absolute;
+  top: 0;
   margin: 0 auto;
   max-width: 414px;
   padding: 20px 0 0;
